Fix spacing on availability label

--- a/static/booking/css/custom-v1.7.css
+++ b/static/booking/css/custom-v1.7.css
@@ -1065,7 +1065,7 @@ li>a.adminmenu {
 .label.label-rounded.label-spaces {
     display: block;
     border-radius: 25px;
-    width: 58px;
+    width: 66px;
     padding-top: 4px;
     padding-bottom: 4px;
 }
